panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__execute__arithmetic__test_unary_not.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/arithmetic/test_unary_not.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/arithmetic/test_unary_not.c"
   (declaration external (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)) ∅)
   (function-definition external stack-size=104
      (main~1 `fn(∅: int, argv: ptr<ptr<char>>) -> int` (static main))
      (params
         (main.unnamed_parameter.0~3 `int` @0)
         (argv~4 `ptr<ptr<char>>` @8))
      (compound-statement
         (definition (i~5 `int` @16) (42 `int` @16))
         (expression
            (call `int` @20
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @24
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
               (noop-type-conversion `ptr<char const>` @32
                  (deref `ptr<char>` @32
                     (ptr-add `ptr<ptr<char>>` @40
                        (argv~4 `ptr<ptr<char>>` @8)
                        (sign-extend `long` @48 (1 `int` @56)))))
               (not `int` @48 (i~5 `int` @16))))
         (expression
            (call `int` @20
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @24
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
               (noop-type-conversion `ptr<char const>` @32
                  (deref `ptr<char>` @32
                     (ptr-add `ptr<ptr<char>>` @40
                        (argv~4 `ptr<ptr<char>>` @8)
                        (sign-extend `long` @48 (1 `int` @56)))))
               (not `int` @48 (not `int` @48 (i~5 `int` @16)))))
         (expression
            (call `int` @20
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @24
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
               (noop-type-conversion `ptr<char const>` @32
                  (deref `ptr<char>` @32
                     (ptr-add `ptr<ptr<char>>` @40
                        (argv~4 `ptr<ptr<char>>` @8)
                        (sign-extend `long` @48 (1 `int` @56)))))
               (not `int` @48 (not `int` @48 (not `int` @48 (i~5 `int` @16))))))
         (definition (j~6 `int` @20) (not `int` @20 (i~5 `int` @16)))
         (definition (k~7 `int` @24) (not `int` @24 (not `int` @24 (i~5 `int` @16))))
         (definition (l~8 `int` @28) (not `int` @28 (not `int` @28 (not `int` @28 (i~5 `int` @16)))))
         (expression
            (call `int` @32
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @40
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
               (noop-type-conversion `ptr<char const>` @48
                  (deref `ptr<char>` @48
                     (ptr-add `ptr<ptr<char>>` @56
                        (argv~4 `ptr<ptr<char>>` @8)
                        (sign-extend `long` @64 (1 `int` @72)))))
               (j~6 `int` @20)))
         (expression
            (call `int` @32
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @40
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
               (noop-type-conversion `ptr<char const>` @48
                  (deref `ptr<char>` @48
                     (ptr-add `ptr<ptr<char>>` @56
                        (argv~4 `ptr<ptr<char>>` @8)
                        (sign-extend `long` @64 (1 `int` @72)))))
               (k~7 `int` @24)))
         (expression
            (call `int` @32
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @40
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
               (noop-type-conversion `ptr<char const>` @48
                  (deref `ptr<char>` @48
                     (ptr-add `ptr<ptr<char>>` @56
                        (argv~4 `ptr<ptr<char>>` @8)
                        (sign-extend `long` @64 (1 `int` @72)))))
               (l~8 `int` @28)))
         (expression
            (call `int` @32
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @40
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
               (noop-type-conversion `ptr<char const>` @48
                  (deref `ptr<char>` @48
                     (ptr-add `ptr<ptr<char>>` @56
                        (argv~4 `ptr<ptr<char>>` @8)
                        (sign-extend `long` @64 (1 `int` @72)))))
               (not `int` @64 (0 `int` @64))))
         (definition (p~9 `ptr<int>` @32)
            (addressof `ptr<int>` @32
               (i~5 `int` @16)))
         (expression
            (call `int` @40
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @48
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
               (noop-type-conversion `ptr<char const>` @56
                  (deref `ptr<char>` @56
                     (ptr-add `ptr<ptr<char>>` @64
                        (argv~4 `ptr<ptr<char>>` @8)
                        (sign-extend `long` @72 (1 `int` @80)))))
               (not `int` @72 (p~9 `ptr<int>` @32))))
         (expression
            (call `int` @40
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @48
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
               (noop-type-conversion `ptr<char const>` @56
                  (deref `ptr<char>` @56
                     (ptr-add `ptr<ptr<char>>` @64
                        (argv~4 `ptr<ptr<char>>` @8)
                        (sign-extend `long` @72 (1 `int` @80)))))
               (not `int` @72 (not `int` @72 (p~9 `ptr<int>` @32)))))
         (expression
            (call `int` @40
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @48
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
               (noop-type-conversion `ptr<char const>` @56
                  (deref `ptr<char>` @56
                     (ptr-add `ptr<ptr<char>>` @64
                        (argv~4 `ptr<ptr<char>>` @8)
                        (sign-extend `long` @72 (1 `int` @80)))))
               (not `int` @72 (not `int` @72 (not `int` @72 (p~9 `ptr<int>` @32))))))
         (definition (c~10 `char` @40) (truncate `char` @40 (42 `int` @44)))
         (expression
            (call `int` @44
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @48
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
               (noop-type-conversion `ptr<char const>` @56
                  (deref `ptr<char>` @56
                     (ptr-add `ptr<ptr<char>>` @64
                        (argv~4 `ptr<ptr<char>>` @8)
                        (sign-extend `long` @72 (1 `int` @80)))))
               (not `int` @72 (c~10 `char` @40))))
         (expression
            (call `int` @44
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @48
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
               (noop-type-conversion `ptr<char const>` @56
                  (deref `ptr<char>` @56
                     (ptr-add `ptr<ptr<char>>` @64
                        (argv~4 `ptr<ptr<char>>` @8)
                        (sign-extend `long` @72 (1 `int` @80)))))
               (not `int` @72 (not `int` @72 (c~10 `char` @40)))))
         (definition (c2~11 `char` @41) (truncate `char` @41 (0 `int` @44)))
         (expression
            (call `int` @44
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @48
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
               (noop-type-conversion `ptr<char const>` @56
                  (deref `ptr<char>` @56
                     (ptr-add `ptr<ptr<char>>` @64
                        (argv~4 `ptr<ptr<char>>` @8)
                        (sign-extend `long` @72 (1 `int` @80)))))
               (not `int` @72 (c2~11 `char` @41))))
         (expression
            (call `int` @44
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @48
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
               (noop-type-conversion `ptr<char const>` @56
                  (deref `ptr<char>` @56
                     (ptr-add `ptr<ptr<char>>` @64
                        (argv~4 `ptr<ptr<char>>` @8)
                        (sign-extend `long` @72 (1 `int` @80)))))
               (not `int` @72 (not `int` @72 (c2~11 `char` @41)))))
         (definition (c3~12 `char` @42) (truncate `char` @42 (not `int` @44 (27 `int` @44))))
         (expression
            (call `int` @44
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @48
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
               (noop-type-conversion `ptr<char const>` @56
                  (deref `ptr<char>` @56
                     (ptr-add `ptr<ptr<char>>` @64
                        (argv~4 `ptr<ptr<char>>` @8)
                        (sign-extend `long` @72 (1 `int` @80)))))
               (sign-extend `int` @72 (c3~12 `char` @42)))))))

----- stderr -----
